Logging configuration changed, Readme updated, licence updated

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning"
+		},
+		"Debug": {
+			"Default": "Trace",
+			"Microsoft": "Information"
+		},
+		"Console": {
+			"Default": "Information",
+			"Microsoft": "Information"
+		},
+		"EventLog": {
+			"Default": "Warning"
+		}
+	}
 }
