--- a/GidsiksFail2BanService.csproj
+++ b/GidsiksFail2BanService.csproj
@@ -33,4 +33,8 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
 		<PackageReference Include="WindowsFirewallHelper" Version="2.2.0.86" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Sources\" />
+	</ItemGroup>
 </Project>
