--- a/GidsiksFail2BanService.csproj
+++ b/GidsiksFail2BanService.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
+	<Import Project="GidsiksFail2BanService.Common.Props" />
 
 	<PropertyGroup>
 		<TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
@@ -9,10 +10,6 @@
 		<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
 		<RootNamespace>Gidsiks.Fail2BanService</RootNamespace>
 		<PlatformTarget>AnyCPU</PlatformTarget>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<Optimize>True</Optimize>
 	</PropertyGroup>
 
 	<!--ItemGroup>
